Finished usability study edits
Addressed learnability, and how it could be improved within a section

--- a/usability-study/usability-metrics/usability-metrics.tex
+++ b/usability-study/usability-metrics/usability-metrics.tex
@@ -279,6 +279,19 @@ Subjective satisfaction is a priority for each and every one of these sites. Sin
 
 According to the metrics, Amazon yields the highest satisfaction of the three websites for different tasks, even though it is lacking in efficiency and learnability. Since users are satisfied using the website, they are more likely to learn the interface and overlook the more slightly complex interface. If satisfaction is of key importance when considering how to design a shopping website, then Amazon represents a \textbf{strong} model to base a design off of.
 
+\section{Learnability: How It Could Be Improved}
+
+Looking back at the way we recorded learnability and efficiency, we realized that we recorded the metrics wrong. Learnability is a \textit{temporal} metric and should not be scored on a number scale. Efficiency is the time it takes for a user to do something that they already know. Even though we recorded efficiency as time, we recorded it as the first time that the user attempted a given task. This should have been the second, third, etc. time that the user completed that given task.
+
+If we were allowed to re-do our study we would have recorded learnability based how long the specific task took for their first time. We would then record efficiency a second time, third time, etc. We could average those times for a given user if needed. The learnability and the efficiency would then be recorded correctly. The user would be timed for how long it took them to figure out the website, which is the correct way of recording learnability. The user would also be recorded for how long it takes for them to do what they already know how to do.
+
+In more concrete terms, the way that way we would change our study is as follows:
+
+\begin{enumerate}
+\item Record learnability as the first time the user completes the task
+\item Record efficiency as the second and third time the user completes the task (store the average as well)
+\end{enumerate} 
+
 % JD: Appropriate conclusion given the measures that were taken.  As noted, the
 %     measures themselves are a little murky.
 %
