--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -13,4 +13,12 @@
 \author{Edward Bramanti}
 
 \begin{document}
-\maketitle\
+\maketitle
+\pagebreak
+\section{Introduction}
+In the past few years, mobile operating systems have become a hub for both independent developers and game studios alike to publish video games that their consumers can hold in the palm of their hand. Mobile game development once used to be a frontier; now, it seems as though a new game comes out every few weeks, and they battle for the addiction of their consumers. While many different genres of mobile games have been produced, from tower defense to adventure to even massively multiplayer, real-time strategy remains a genre mostly untouched by game developers. One's initial reaction may be to believe that lack of interest in real-time strategy (or RTS) games is responsible for few games being published in that genre.
+\section{Design \& Layout}
+\section{Usage Scenarios}
+\section{Design Rationale}
+\section{Usability Analysis}
+\end{document}  
