Beginning implementation of unit selection design

--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -18,7 +18,14 @@
 \section{Introduction}
 In the past few years, mobile operating systems have become a hub for both independent developers and game studios alike to publish video games that their consumers can hold in the palm of their hand. Mobile game development once used to be a frontier; now, it seems as though a new game comes out every few weeks, and they battle for the addiction of their consumers. While many different genres of mobile games have been produced, from tower defense to adventure to even massively multiplayer, real-time strategy remains a genre mostly untouched by mobile game developers. One's initial reaction may be to believe that lack of interest in real-time strategy (or RTS) games is responsible for few games being published in that genre. Nevertheless, as this design will outline, a lack of intuitive controls and user interface has prevented the genre from thriving on mobile. Many developers have been met with interface design challenges. One example of this is a result of lacking hardware devices outside of the touchscreen (such as a mouse and keyboard, or even a controller with buttons). My user design will show how mobile strategy is the future of challenging, yet rewarding mobile gaming. Empowering the users by utilizing every inch of screen is the key foundation to building a successful mobile RTS interface.
 \section{Design \& Layout}
+To successfully approach designing a user interface for mobile RTS, my approach will be to play to a touchscreen's strengths, and conform to design principles in mobile operating systems.
+	\subsection{Unit Selection}
+	To select a unit within the proposed design, a user will use just a finger and tap on whatever unit they want to control. While this is simple enough, the challenge arises when a user wants to select multiple units, because of a lack of draggable input using a mouse cursor. I decided to take an approach similar to Halo Wars. Halo Wars employs a reticle, and when a user holds down the A button on the Xbox 360 controller, an overlay appears that shows units in the selection circle. Since the user's controller is the touchscreen itself, the same action will occur when one holds down their finger on the screen. After a small delay, the selection circle will expand from the held touch input, and allow multiple units to be selected at once. \\
+	When a unit is selected, stats will be displayed about them centered at the bottom of the screen. If multiple units are selected, they will be displayed in groups by type in the top-left corner of the screen. This will allow a user to both view attributes below their selection, and view their selected units in a status bar at the top of the screen (which, in mobile OSes, is always located at the top of the touchscreen.)
+	\subsection{Minimap}
 \section{Usage Scenarios}
 \section{Design Rationale}
+	\subsection{Unit Selection}
+	There are a few mobile RTS games on the market today. One notable example is Starfront: Collision, which is available for iOS devices. Starfront's approach for selecting units, or multiple units, is to use a pinch, or two-finger touch, to select a group of units. The biggest problem with Starfront.
 \section{Usability Analysis}
 \end{document}  
