Implementing unit movement and cleaning up minimap

--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -22,12 +22,18 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	\subsection{Unit Selection}
 	To select a unit within the proposed design, a user will use just a finger and tap on whatever unit they want to control. While this is simple enough, the challenge arises when a user wants to select multiple units, because of a lack of draggable input using a mouse cursor. I decided to take an approach similar to Halo Wars. Halo Wars employs a reticle, and when a user holds down the A button on the Xbox 360 controller, an overlay appears that shows units in the selection circle. Since the user's controller is the touchscreen itself, the same action will occur when one holds down their finger on the screen. After a small delay, the selection circle will expand from the held touch input, and allow multiple units to be selected at once. \\
 	When a unit is selected, stats will be displayed about them centered at the bottom of the screen. If multiple units are selected, they will be displayed in groups by type in the top-left corner of the screen. This will allow a user to both view attributes below their selection, and view their selected units in a status bar at the top of the screen (which, in mobile OSes, is always located at the top of the touchscreen.)
-	\subsection{Unit Movement}
 	\subsection{Minimap}
 	One of the most important information displays to anyone playing a real-time strategy game is the minimap. The minimap is incredibly useful to see where units are located, and where friendly units are deployed. It allows for users to navigate the map quickly; by selecting a location on the map, it allows the camera to snap quickly to that location on the game map. The minimap also provides the user with a way to see where enemies are attacking, and ``pings" information to the user when enemy attacks occur.\\
 	The biggest challenge of implementing this on a mobile device, as opposed to a computer, is the size of the smartphone screen. I believe that the minimap is essential for the user interface in the RTS genre, but I also believe that cluttering the camera view of the map with too many tooltips will make it difficult for the user to quickly issue commands to their units. Therefore, I propose a two-size minimap.
 	%	Picture will go here of the minimap.
-	In a normal view, the user will have a very small glimpse of the minimap, as pictured above. It will show their current camera view on the minimap, and a very small representation of unit locations and map. To conquer the issue of screen space, a tap gesture will be employed on the minimap. When a user taps the minimap once, it will cause the minimap to go full screen. This minimap will allow the user to see a bigger, ``computer-sized" minimap as opposed to providing a static, small minimap that is close to useless anyways. This will allow a user to see everything going on, and their current camera location behind the overlay. To exit the enlarged minimap, the user will have two options. They can either close the enlarged minimap, using a close button included in the large minimap overlay. The other option would be to select an area of the map where they would like the camera to snap to. This will allow for the snap-to-location camera functionality that PC RTS gamers have, while scaling the experience to work within the confines of screen space and touchscreen input.
+	In a normal view, the user will have a very small glimpse of the minimap, as pictured above. It will show their current camera view on the minimap, and a very small representation of unit locations and map. To conquer the issue of screen space, a tap gesture will be employed on the minimap. When a user taps the minimap once, it will cause the minimap to go full screen. This minimap will allow the user to see a bigger, ``computer-sized" minimap as opposed to providing a static, small minimap that is close to useless anyways. This will allow a user to see everything going on, and their current camera location behind the overlay. To exit the enlarged minimap, the user will have two options. They can either close the enlarged minimap by selecting outside of the overlay to dismiss. The other option would be to select an area of the map where they would like the camera to snap to. This will allow for the snap-to-location camera functionality that PC RTS gamers have, while scaling the experience to work within the confines of screen space and touchscreen input.
+	\subsection{Unit Movement}
+	Now that unit selection and the minimap interface has been explained, unit movement is based off of a lot of the same principles. After successfully selecting units on the map, you can use either the minimap overlay or within your camera view to move your units. With a tap using either of those methods, your units will be able to move. This will allow unit movement to be simple and easy to remember. After a tap, while units are moving, holding a tap in a different location will allow a user to chain movement commands together, much like Shift + Right Click in Starcraft II.\\
+	%	Show a Starcraft II example image below.
+	%	TODO: Add information about selecting minimap camera view without moving,
+	%	      or even attacking instead.
+	To attack either a group of units or a base, a single tap on the enemy object will cause an attack command to be issued.
+	\subsection{Camera Control}
 \section{Usage Scenarios}
 \section{Design Rationale}
 	\subsection{Unit Selection}
