Beginning work on camera control

--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -34,9 +34,12 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	%	      or even attacking instead.
 	To attack either a group of units or a base, a single tap on the enemy object will cause an attack command to be issued.
 	\subsection{Camera Control}
+	For camera control, I took inspiration from both iOS and Android Design paradigms. Pinching with two fingers
 \section{Usage Scenarios}
 \section{Design Rationale}
 	\subsection{Unit Selection}
 	There are a few mobile RTS games on the market today. One notable example is Starfront: Collision, which is available for iOS devices. Starfront's approach for selecting units, or multiple units, is to use a pinch, or two-finger touch, to select a group of units. The biggest problem with Starfront.
+	\subsection{Camera Control}
+	To rationalize my design for camera control, I will address two examples: one illustrating why Starfront: Collision's implementation makes camera control difficult for the user, and mobile OS user interface control for controlling the ``camera'' of a webpage in a mobile browser.
 \section{Usability Analysis}
 \end{document}  
