Added work to usability analysis

--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -54,4 +54,11 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	%	TODO: Put pinch gesture photo here.
 	A known paradigm in mobile operating systems is the two-finger pinch gesture; for example, in the Google Maps application on
 \section{Usability Analysis}
+	\subsection{Learnability}
+	I believe that time for learnability will be incredibly low utilizing this interface design. This mobile RTS interface follows navigation guidelines of ``standardizing task sequences'', such as pinch-to-zoom and two-finger rotation for camera control.
+	\subsection{Efficiency}
+	\subsection{Rate of Errors}
+	\subsection{Memorability}
+	Memorability will always be a difficult area, and not just because of a user interface. Real-time strategy games demand a mastery of a control scheme, map layout, and the core gameplay strategy to win. This is what has made this genre of game competitive even before the computer (chess is one notable example).
+	\subsection{Satisfaction}
 \end{document}  
