--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -21,10 +21,10 @@ In the past few years, mobile operating systems have become a hub for both indep
 To successfully approach designing a user interface for mobile RTS, my approach will be to play to a touchscreen's strengths, and conform to design principles in mobile operating systems.
 	\subsection{Unit Selection}
 	To select a unit within the proposed design, a user will use just a finger and tap on whatever unit they want to control. While this is simple enough, the challenge arises when a user wants to select multiple units, because of a lack of draggable input using a mouse cursor. I decided to take an approach similar to Halo Wars. Halo Wars employs a reticle, and when a user holds down the A button on the Xbox 360 controller, an overlay appears that shows units in the selection circle. Since the user's controller is the touchscreen itself, the same action will occur when one holds down their finger on the screen. After a small delay, the selection circle will expand from the held touch input, and allow multiple units to be selected at once. \\
-	When a unit is selected, stats will be displayed about them centered at the bottom of the screen. If multiple units are selected, they will be displayed in groups by type in the top-left corner of the screen. This will allow a user to both view attributes below their selection, and view their selected units in a status bar at the top of the screen (which, in mobile OSes, is always located at the top of the touchscreen.)
+	\indent When a unit is selected, stats will be displayed about them centered at the bottom of the screen. If multiple units are selected, they will be displayed in groups by type in the top-left corner of the screen. This will allow a user to both view attributes below their selection, and view their selected units in a status bar at the top of the screen (which, in mobile OSes, is always located at the top of the touchscreen.)
 	\subsection{Minimap}
 	One of the most important information displays to anyone playing a real-time strategy game is the minimap. The minimap is incredibly useful to see where units are located, and where friendly units are deployed. It allows for users to navigate the map quickly; by selecting a location on the map, it allows the camera to snap quickly to that location on the game map. The minimap also provides the user with a way to see where enemies are attacking, and ``pings'' information to the user when enemy attacks occur.\\
-	The biggest challenge of implementing this on a mobile device, as opposed to a computer, is the size of the smartphone screen. I believe that the minimap is essential for the user interface in the RTS genre, but I also believe that cluttering the camera view of the map with too many tooltips will make it difficult for the user to quickly issue commands to their units. Therefore, I propose a two-size minimap.
+	\indent The biggest challenge of implementing this on a mobile device, as opposed to a computer, is the size of the smartphone screen. I believe that the minimap is essential for the user interface in the RTS genre, but I also believe that cluttering the camera view of the map with too many tooltips will make it difficult for the user to quickly issue commands to their units. Therefore, I propose a two-size minimap.
 	%	Picture will go here of the minimap.
 	In a normal view, the user will have a very small glimpse of the minimap, as pictured above. It will show their current camera view on the minimap, and a very small representation of unit locations and map. To conquer the issue of screen space, a tap gesture will be employed on the minimap. When a user taps the minimap once, it will cause the minimap to go full screen. This minimap will allow the user to see a bigger, ``computer-sized'' minimap as opposed to providing a static, small minimap that is close to useless anyways. This will allow a user to see everything going on, and their current camera location behind the overlay. To exit the enlarged minimap, the user will have two options. They can either close the enlarged minimap by selecting outside of the overlay to dismiss. The other option would be to select an area of the map where they would like the camera to snap to. This will allow for the snap-to-location camera functionality that PC RTS gamers have, while scaling the experience to work within the confines of screen space and touchscreen input.
 	\subsection{Unit Movement}
@@ -32,19 +32,19 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	%	Show a Starcraft II example image below.
 	%	TODO: Add information about selecting minimap camera view without moving,
 	%	      or even attacking instead.
-	To attack either a group of units or a base, a single tap on the enemy object will cause an attack command to be issued.
+	\indent To attack either a group of units or a base, a single tap on the enemy object will cause an attack command to be issued.
 	\subsection{Camera Control}
 	For camera control, I took inspiration from both iOS and Android Design paradigms. Pinching with two fingers outward will allow the user to zoom in on their current view, and conversely, inward would allow the user to zoom out. It seemed natural to use this in the control scheme so that users would not becomed confused when a two-finger pinch causes a different action to happen, such as a unit selection box. \\
-	In addition, camera rotation is essential for users playing a real-time strategy game. A user needs to be able to see from a different direction than just a fixed north; therefore, the user needs intutitive controls to dynamically adjust to the situation. Once again looking at universal gestures in the mobile OS, I took a page from Google Maps' two finger rotate to view at any angle. This will allow the user to adjust the camera's direction quickly and effectively.
+	\indent In addition, camera rotation is essential for users playing a real-time strategy game. A user needs to be able to see from a different direction than just a fixed north; therefore, the user needs intutitive controls to dynamically adjust to the situation. Once again looking at universal gestures in the mobile OS, I took a page from Google Maps' two finger rotate to view at any angle. This will allow the user to adjust the camera's direction quickly and effectively.
 	\subsection{Building Management \& Interface}
-	%	TODO: Add photo of Android Jellybean Camera interface.
+	%	TODO: Add photo of Android Jellybean Camera interface. Note that implementation is similar, just flipped 90º.
 	For building management, my goal was to make it easy for players to be able to queue up units and research while still maintaining a touchscreen design. In otherwards, I wanted users to be able to quickly see at a glance what's going on quickly with each of their different buildings. I found inspiration in the Stock Android Camera interface, where users hold their finger down and a fanned-out circle appears from their finger. This allows users to toggle different cameras, enable HDR, or even change white balance. Using a similar technique, instead of holding down their finger on a building, when a user taps a building a similar fan-like circle appears around it. \\
-	A good illustration of how this will look would be to imagine a barracks with three unit types: a soldier, an anti-infantry unit, and some other special unit. Each unit would be displayed on the right side of the fan, with a unit count next to the pictorial designation of what type of unit they are. Each little fan section, when soldiers are being queued to be built, will fill with a color as units are trained. On the left side of the fan is where upgrades will be applied to certain units. \\
-	This illustration above is an example of the adaptive interface that this fan will provide on a building. For my design, if a developer wants to create a building type, unit creation will be on the right according to my design guidelines, and research will always be on the left. The only exception to this rule will be if the building itself is for research only, or if it is some special type of building used for only resource collection, etc. The interface adapts to the many different ideas that developers have, while providing them guidelines on how to organize their building tasks.
+	\indent A good illustration of how this will look would be to imagine a barracks with three unit types: a soldier, an anti-infantry unit, and some other special unit. Each unit would be displayed on the right side of the fan, with a unit count next to the pictorial designation of what type of unit they are. Each little fan section, when soldiers are being queued to be built, will fill with a color as units are trained. On the left side of the fan is where upgrades will be applied to certain units. \\
+	\indent This illustration above is an example of the adaptive interface that this fan will provide on a building. For my design, if a developer wants to create a building type, unit creation will be on the right according to my design guidelines, and research will always be on the left. The only exception to this rule will be if the building itself is for research only, or if it is some special type of building used for only resource collection, etc. The interface adapts to the many different ideas that developers have, while providing them guidelines on how to organize their building tasks.
 \section{Usage Scenarios}
 	\subsection{Creating a Real-Time Strategy Game for Mobile Devices}
 	In its simplest form, this is why this interface was designed: to create a simple and easily controllable interface for a developer to design a game within. According to critics, the difficulties that real-time strategy games have always faced outside of the traditional PC market is lacking a mouse and keyboard. My entire interface design is not only to prove these critics wrong, but also to show that the reason for a lacking RTS market outside of personal computers is because developers have implemented a poor user interface and control system for the user. \\
-	The type of real-time strategy that can be implemented using this interface design and layout is pretty endless. While many tower-defense RTS games have already found success on the market due to a time-lapse between tower creation, there are many other genres of real-time strategy that will benefit from this interface. In addition, this usage scenario need not apply to only one device; the interface is designed to be dynamic, regardless of screen size, buttons, etc. This is due to the universal importance of the touchscreen to smartphones; almost all modern smartphones have a touchscreen interface, which means using this interaction style will be seamless and simple for today's devices.
+	\indent The type of real-time strategy that can be implemented using this interface design and layout is pretty endless. While many tower-defense RTS games have already found success on the market due to a time-lapse between tower creation, there are many other genres of real-time strategy that will benefit from this interface. In addition, this usage scenario need not apply to only one device; the interface is designed to be dynamic, regardless of screen size, buttons, etc. This is due to the universal importance of the touchscreen to smartphones; almost all modern smartphones have a touchscreen interface, which means using this interaction style will be seamless and simple for today's devices.
 	\subsection{Companion App: RTS/FPS Hybrid between Console/PC and Mobile Devices}
 	%	TODO: Cite an article on MAG.
 	One unique way this design could be used would be a way to provide a companion app that would enhance the gameplay of a First-Person shooter while also providing a strategy element. This would allow both the mobile companion and the larger console game to be pushed to a much larger scale than ever before. While games like MAG
@@ -53,9 +53,9 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	There are a few mobile RTS games on the market today. One notable example is Starfront: Collision, which is available for iOS devices. Starfront's approach for selecting units, or multiple units, is to use a pinch, or two-finger touch, to select a group of units. The biggest problem with Starfront.
 	\subsection{Camera Control}
 	To rationalize my design for camera control, I will address two examples: one illustrating why Starfront: Collision's implementation makes camera control difficult for the user, and mobile OS user interface control for controlling the ``camera'' of a webpage in a mobile browser. \\
-	In Starfront, users are provided with a slider on the right side of the interface, which allows for users to zoom in by sliding up, and zoom out by sliding down. Nevertheless, as mentioned in the Unit Selection rationale, it directly is in conflict with what the gesture does across the OS. A user will use the two-finger pinch gesture, and instead of zooming in, they will be met with a unit selection box. This app is an example of a failure in implementing direct manipulation that corresponds to what most of the mobile OS does in regards to that gesture. \\
+	\indent In Starfront, users are provided with a slider on the right side of the interface, which allows for users to zoom in by sliding up, and zoom out by sliding down. Nevertheless, as mentioned in the Unit Selection rationale, it directly is in conflict with what the gesture does across the OS. A user will use the two-finger pinch gesture, and instead of zooming in, they will be met with a unit selection box. This app is an example of a failure in implementing direct manipulation that corresponds to what most of the mobile OS does in regards to that gesture. \\
 	%	TODO: Put pinch gesture photo here.
-	A known paradigm in mobile operating systems is the two-finger pinch gesture; for example, in the Google Maps application on
+	\indent A known paradigm in mobile operating systems is the two-finger pinch gesture; for example, in the Google Maps application on
 \section{Usability Analysis}
 	\subsection{Learnability}
 	I believe that time for learnability will be incredibly low utilizing this interface design. This mobile RTS interface follows navigation guidelines of ``standardizing task sequences'', such as pinch-to-zoom and two-finger rotation for camera control.
