Implemented memorability section of document

--- a/dream-design/dream-design.tex
+++ b/dream-design/dream-design.tex
@@ -74,6 +74,6 @@ To successfully approach designing a user interface for mobile RTS, my approach 
 	\subsection{Efficiency}
 	\subsection{Rate of Errors}
 	\subsection{Memorability}
-	Memorability will always be a difficult area, and not just because of a user interface. Real-time strategy games demand a mastery of a control scheme, map layout, and the core gameplay strategy to win. This is what has made this genre of game competitive even before the computer (chess is one notable example).
+	Memorability will always be a difficult area, and not just because of a user interface. Real-time strategy games demand a mastery of a control scheme, map layout, and the core gameplay strategy to win. This is what has made this genre of game competitive even before the computer (chess is one notable example). Nevertheless, since I believe that simplifying the interface and standardizing task interfaces will cut down on the time it takes to memorize commands. If users already know how to use their mobile devices with a standardized set of guidelines that most developers conform to, this will as well. That's why I believe that even though memorability will be difficult due to the complexity of some real-time strategy games, my interface will allow the time to at least be reduced in memorizing movements and commands.
 	\subsection{Satisfaction}
 \end{document}  
